# ta-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.am  README-DEVS.md  README.md  RUST_CHANGELOG.md  RUST_CONVERSION_PLAN.md  conanfile.py  configure.ac  mkdocs.yml  rust-toolchain.toml  ta-lib.pc.in  ta-lib.spec.in  ta_func_api.xml  ta_func_list.txt  uninstall
.github/workflows/: dev-nightly-tests.yml  docs.yml  main-nightly-tests.yml  post-release-vcpkg.yml  release-step-1.yml  release-step-2.yml  website.yml
.plans/: 2026-03-19-perftest-redesign.md  function-variant-refactor-design.md  function-variant-refactor-plan.md  perf-iteration-log-direct.md  perf-iteration-log.md  ta-bench-direct-design.md  ta-bench-direct-plan.md  unguarded-columns-next.md
cmake/: warn-stale-installs.cmake.in
cmake-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  ta_regtest_rust
docs/: APO.md  BBANDS.md  BETA.md  CDL2CROWS.md  CDL3BLACKCROWS.md  CDL3INSIDE.md  CDL3LINESTRIKE.md  CDL3OUTSIDE.md  CDL3STARSINSOUTH.md  CDL3WHITESOLDIERS.md  CDLABANDONEDBABY.md  CDLADVANCEBLOCK.md  CDLBELTHOLD.md  CDLBREAKAWAY.md  CDLCLOSINGMARUBOZU.md  CDLCONCEALBABYSWALL.md  CDLCOUNTERATTACK.md  CDLDARKCLOUDCOVER.md  CDLDOJI.md  CDLDOJISTAR.md  CDLDRAGONFLYDOJI.md  CDLENGULFING.md  CDLEVENINGDOJISTAR.md  CDLEVENINGSTAR.md  CDLGAPSIDESIDEWHITE.md  CDLGRAVESTONEDOJI.md  CDLHAMMER.md  CDLHANGINGMAN.md  CDLHARAMI.md  CDLHARAMICROSS.md  CDLHIGHWAVE.md  CDLHIKKAKE.md  CDLHIKKAKEMOD.md  CDLHOMINGPIGEON.md  CDLIDENTICAL3CROWS.md  CDLINNECK.md  CDLINVERTEDHAMMER.md  CDLKICKING.md  CDLKICKINGBYLENGTH.md  CDLLADDERBOTTOM.md  (+86 more)
docs/functions/: accbands.md  acos.md  ad.md  add.md  adosc.md  adx.md  adxr.md  apo.md  aroon.md  aroonosc.md  asin.md  atan.md  atr.md  avgdev.md  avgprice.md  bbands.md  beta.md  bop.md  cci.md  cdl2crows.md  cdl3blackcrows.md  cdl3inside.md  cdl3linestrike.md  cdl3outside.md  cdl3starsinsouth.md  cdl3whitesoldiers.md  cdlabandonedbaby.md  cdladvanceblock.md  cdlbelthold.md  cdlbreakaway.md  cdlclosingmarubozu.md  cdlconcealbabyswall.md  cdlcounterattack.md  cdldarkcloudcover.md  cdldoji.md  cdldojistar.md  cdldragonflydoji.md  cdlengulfing.md  cdleveningdojistar.md  cdleveningstar.md  (+123 more)
docs/plans/: 2026-03-01-cross-language-harness-design.md  2026-03-01-cross-language-harness-plan.md  2026-03-01-rsi-conversion-design.md  (+13 more)
include/: ta_abstract.h  ta_common.h  ta_defs.h  ta_func.h  ta_func_unguarded.h
java/: build.xml
rust/: Cargo.toml
rust/ffi/: Cargo.toml
rust/ffi/src/: generated.rs  lib.rs
rust/src/: lib.rs
rust/src/ta_func/: float.rs  mod.rs  mult.rs  rsi.rs  sma.rs
rust/tests/: float_test.rs  mult_test.rs  rsi_test.rs  sma_test.rs
scripts/: abi_gate.py  ask_ai.py  build.py  build_064_serve.py  expand_hilbert_macros.py  merge.py  package.py  post-release-vcpkg.py  pre-release-checks.py  regtest.py  replace_candle_macros.py  replace_macros.py  rust_stream_debug.py  serve_version.py  stream_sanitize.py  sync-website.py  test-dist.py  verify-musl-fma.sh  verify_ta_abstract.py
src/: Makefile.am
src/ta_func/: Makefile.am  (+168 more)
ta_codegen/output/rust/tools/talib_rs_serve/: Cargo.toml
ta_codegen/output/rust/tools/talib_rs_serve/src/: arms_math.rs  arms_momentum.rs  arms_overlap.rs  arms_statistic_cycle.rs  arms_volume_volatility_price.rs  main.rs
ta_func_defs/: enums.yaml
tests/cross-language/c/: CMakeLists.txt  main.c
website/: .gitignore  deploy-docs.yml  package.json  pnpm-lock.yaml
(+3091 files in other folders)
