[package]
name = "ta-lib"
version = "0.6.4"
edition = "2021"
authors = ["Mario Fortier", "Chad Furman"]
description = "Technical Analysis Library - Rust implementation"
documentation = "https://ta-lib.org/docs/"
homepage = "https://ta-lib.org/"
repository = "https://github.com/TA-Lib/ta-lib"
license = "BSD-3-Clause"
keywords = ["technical-analysis", "trading", "finance", "indicators", "ta"]
categories = ["algorithms", "mathematics", "finance"]
readme = "../README.md"

[lib]
name = "ta_lib"
path = "src/lib.rs"

[[bin]]
name = "ta_codegen_serve"
path = "src/bin/ta_codegen_serve.rs"

[dependencies]
serde_json = "1"

[dev-dependencies]
# For testing the generated functions
criterion = "0.5"

[features]
default = []
# Feature flags for function groups can be added in the future as needed

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]