[package]
name = "talib_rs_serve"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC server exposing the talib-rs crate (third-party pure-Rust TA-Lib) so ta_bench can benchmark it alongside the TA-Lib language servers"
license = "BSD-3-Clause"
publish = false

[dependencies]
talib-rs = "0.1.2"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
